Initially created accounts receivable aging report

--- a/ZenBiz/App.config
+++ b/ZenBiz/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="ZenBizInstance"
-		   connectionString="server=localhost;database=zenbiz_db;user id=root;password=Root123!"
+		   connectionString="server=localhost;database=zenbiz_db;user id=root;password="
 			providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
