--- a/ZenBiz/ZenBiz.csproj
+++ b/ZenBiz/ZenBiz.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <None Remove="AppModules\RDLC\aging-accounts-payable.rdlc" />
     <None Remove="AppModules\RDLC\aging-accounts-receivables.rdlc" />
+    <None Remove="AppModules\RDLC\fast-and-slow-moving-stocks.rdlc" />
     <None Remove="AppModules\RDLC\gross-income.rdlc" />
     <None Remove="AppModules\RDLC\sold-items.rdlc" />
     <None Remove="AppModules\RDLC\statement-of-account-by-customer.rdlc" />
@@ -29,6 +30,9 @@
 
   <ItemGroup>
     <Content Include="AppModules\RDLC\aging-accounts-receivables.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="AppModules\RDLC\fast-and-slow-moving-stocks.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="AppModules\RDLC\gross-income.rdlc">
