--- a/ZenBiz/App.config
+++ b/ZenBiz/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="ZenBizInstance"
-		   connectionString="server=localhost;database=zenbiz_db;user id=root;password="
+		   connectionString="server=192.168.18.183;database=zenbiz_db;user id=zenbiz;password=@zenbiz123"
 			providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
