--- a/ZenBiz/App.config
+++ b/ZenBiz/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="ZenBizInstance"
-		   connectionString="server=192.168.18.183;database=zenbiz_db;user id=zenbiz;password=@zenbiz123"
+		<add name="PamanaWaterInventoryInstance"
+		   connectionString="server=192.168.18.68;database=pamanawater_inventory;user id=pamanawater_inventory;password=@pamanawater_inventory123"
 			providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
