--- a/ZenBiz/PamanaWaterInventory.csproj
+++ b/ZenBiz/PamanaWaterInventory.csproj
@@ -19,7 +19,6 @@
     <None Remove="AppModules\RDLC\statement-of-account-by-customer.rdlc" />
     <None Remove="AppModules\RDLC\statement-of-account-by-transaction.rdlc" />
     <None Remove="AppModules\RDLC\stock-adjustments-report.rdlc" />
-    <None Remove="AppModules\RDLC\stocks-per-warehouse.rdlc" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,7 +55,7 @@
     <Content Include="AppModules\RDLC\stocks-per-branch.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="AppModules\RDLC\stocks-per-warehouse.rdlc">
+    <Content Include="AppModules\RDLC\stocks-per-branch-details.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
