Changed database config. file for local hosting

--- a/ZenBiz/App.config
+++ b/ZenBiz/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="PamanaWaterInventoryInstance"
-		   connectionString="server=PWCServerPag;database=pamanawater_inventory;user id=pamanawater_inventory;password=@pamanawater_inventory123"
+		   connectionString="server=localhost;database=pamanawater_inventory;user id=pamanawater_inventory;password=@pamanawater_inventory123"
 			providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration> 
